src/objects/Customer_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Feedbacks</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High_Level_Feedback_Box__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>High Level Feedback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Box__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Box__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Code 400 Data Entry</fullName>
                    <default>true</default>
                    <label>Code 400 Data Entry</label>
                </value>
                <value>
                    <fullName>Code 401 Billing Error</fullName>
                </value>
                <value>
                    <fullName>Code 402 Shipping Error</fullName>
                </value>
                <value>
                    <fullName>Code 403 Fulfillment Error</fullName>
                </value>
                <value>
                    <fullName>Code 404 Order Entry</fullName>
                </value>
                <value>
                    <fullName>Code 405 Lack of Follow Up</fullName>
                </value>
                <value>
                    <fullName>Code 406 Distributor</fullName>
                </value>
                <value>
                    <fullName>Code 407 Phone</fullName>
                </value>
                <value>
                    <fullName>Code 408 Clarity of Process</fullName>
                </value>
                <value>
                    <fullName>Code 409 Quoting Error</fullName>
                </value>
                <value>
                    <fullName>Code 410 Insurance</fullName>
                </value>
                <value>
                    <fullName>Code 411 Online Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Customer Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>